@@ -1102,6 +1102,9 @@ Release 0.19.2 - Unreleased
     HADOOP-5259. Job with output hdfs:/user/<username>/outputpath (no 
     authority) fails with Wrong FS. (Doug Cutting via hairong)
 
+    HADOOP-5522. Documents the setup/cleanup tasks in the mapred tutorial.
+    (Amareshwari Sriramadasu via ddas)
+
 Release 0.19.1 - 2009-02-23 
 
   IMPROVEMENTS
